--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script>window.jQuery || document.write('<script src="js/lib/jquery-3.4.1.min.js"><\/script>')</script>
     <script src="js/preset.js"></script>
     <script src="js/generator.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
   </body>
 
